# lcpfn

./: .gitignore  pyproject.toml  readme.md
lcpfn/: __init__.py  bar_distribution.py  curves.py  decoders.py  domhan_prior.py  encoders.py  layer.py  model.py  positional_encodings.py  train.py  train_lcpfn.py  transformer.py  utils.py
lcpfn/priors/: prior.py  utils.py
tests/: test_model.py
